# loom

./: .gitattributes  .gitmodules  CMakeLists.txt  bridge.h  init.scm  main.c  main.c.bak  modules.h  scheme.h
assets/: P32d.qoi  rk16f.qoi  rk16y.qoi
core/: common.h  core.h  crt.h  descriptor.h  generator.h  modules.h  node.h  uid.h
core/shaders/fragment/: sdfline.glsl
core/shaders/vertex/: flat.glsl
modules/: crt.scm  generator.scm  init.scm  layout.scm  modules.h  vco.scm
s7/: CMakeLists.txt  s7.c  s7.h
ui/: menu.scm
